// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply mysql multiple schemas should have an expected appearance when all changes need to be applied 1`] = `
"    [1mApplying required actions...[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:23:11)[22m[2m[22m


[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:24:11)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/init/databases.sql [90m(change:init_databases)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/notification.sql [90m(resource:table:commsdb.notification)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/notification_version.sql [90m(resource:table:commsdb.notification_version)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/spaceship.sql [90m(resource:table:spacedb.spaceship)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/spaceship_cargo.sql [90m(resource:table:spacedb.spaceship_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:spacedb.view_spaceship_with_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/functions/find_message_hash_by_text.sql [90m(resource:function:commsdb.find_message_hash_by_text)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/procedures/upsert_message.sql [90m(resource:procedure:commsdb.upsert_message)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

"
`;

exports[`apply mysql multiple schemas should have an expected appearance when all changes need to be reapplied, if possible 1`] = `
"    [1mApplying required actions...[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:23:11)[22m[2m[22m


[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:24:11)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/notification.sql [90m(resource:table:commsdb.notification)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/notification_version.sql [90m(resource:table:commsdb.notification_version)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/spaceship.sql [90m(resource:table:spacedb.spaceship)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/tables/spaceship_cargo.sql [90m(resource:table:spacedb.spaceship_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:spacedb.view_spaceship_with_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/functions/find_message_hash_by_text.sql [90m(resource:function:commsdb.find_message_hash_by_text)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql.multischema/definitions/procedures/upsert_message.sql [90m(resource:procedure:commsdb.upsert_message)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

"
`;

exports[`apply mysql single schema should have an expected appearance when all changes need to be applied 1`] = `
"    [1mApplying required actions...[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:23:11)[22m[2m[22m


[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:24:11)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/data_source.sql [90m(change:table_20190626_1)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification.sql [90m(resource:table:notification)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification_version.sql [90m(resource:table:notification_version)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/functions/find_message_hash_by_text.sql [90m(resource:function:find_message_hash_by_text)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/procedures/upsert_message.sql [90m(resource:procedure:upsert_message)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/mysql/definitions/init/data_sources.sql [90m(change:init_data_source)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

"
`;

exports[`apply mysql single schema should have an expected appearance when all changes need to be reapplied, if possible 1`] = `
"    [1mApplying required actions...[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:23:11)[22m[2m[22m


[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:24:11)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification.sql [90m(resource:table:notification)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql/definitions/tables/notification_version.sql [90m(resource:table:notification_version)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/mysql/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql/definitions/functions/find_message_hash_by_text.sql [90m(resource:function:find_message_hash_by_text)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/mysql/definitions/procedures/upsert_message.sql [90m(resource:procedure:upsert_message)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

"
`;

exports[`apply postgres should have an expected appearance when all changes need to be applied 1`] = `
"    [1mApplying required actions...[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:23:11)[22m[2m[22m


[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:24:11)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/data_source.sql [90m(change:table_20190626_1)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/photo.sql [90m(resource:table:photo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/functions/get_answer_to_life.sql [90m(resource:function:get_answer_to_life)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/functions/upsert_photo.sql [90m(resource:function:upsert_photo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/init/service_user.sql [90m(change:init_service_user)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[32m[APPLY][39m[1m src/contract/__test_assets__/postgres/definitions/init/data_sources.sql [90m(change:init_data_source)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

"
`;

exports[`apply postgres should have an expected appearance when all changes need to be reapplied, if possible 1`] = `
"    [1mApplying required actions...[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:23:11)[22m[2m[22m


[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:24:11)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship.sql [90m(resource:table:spaceship)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[33m↓[39m[22m [1m[1m[31m[MANUAL_MIGRATION][39m[1m src/contract/__test_assets__/postgres/definitions/tables/spaceship_cargo.sql [90m(resource:table:spaceship_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:36:15)[22m[2m[22m

      [1m[32m✔[39m[22m [1m[1m[33m[REAPPLY][39m[1m src/contract/__test_assets__/postgres/definitions/views/view_spaceship_with_cargo.sql [90m(resource:view:view_spaceship_with_cargo)[39m[22m
[2m[22m
[2m      [2mat applyPlans ([22m[2msrc/logic/commands/applyPlans/applyPlans.ts[2m:45:15)[22m[2m[22m

"
`;
